frontend/src/App.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700;1,900&display=swap');


*{ 
  box-sizing: border-box; 
  margin: 0; 
  padding: 0; 

}

.App {
  font-family: 'Lato', sans-serif;
  letter-spacing: .05em;
}


.topBanner{
  background-color: hsl(209, 57%, 93%);
  padding: 2em;
}

#greeting{
  margin: 1em 0 1em 0;
}
#studyTip{
  text-align: left;
  max-width: 35em;

}

#didYouKnow{
  text-align: left;
  text-transform: uppercase;
  opacity: 0.6;
  margin: 1em 0 1em 0;
}

.cardLink{
  text-decoration: none;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.profileBanner h2{
  color:white;
}

.profileBanner h4{
  color: white;
  font-style: italic;
  line-height: 150%;
  
}



.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.sectionHeader{
  text-align: left;
  margin: 1em 0 1em 1em;

}

.bannerBlurb{
  margin: 1em;
}
.card{
  background-color: #006494;
  padding:3em;
  margin: 0 1em 0 1em;
  border-radius: 1em;
}

.cardTitle, .subTitle{
  color: whitesmoke;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

@media only screen and (min-width: 600px){

  .topBanner{
    display: grid;
    row-template-columns: 40% 60%;
  }

  .mainPageTitle{
    grid-column: 1 / 2;
  }

  .mainPageTitle{
    text-align: left;
    margin: 2em;
  }

  /*
  .nav-links {
    width: 40%;
    display: flex;
    justify-content: space-around;
    align-items: center;
    list-style: none;
    color: white;
    
 }

 nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  min-height: 10vh;
  background: rgb(73, 79, 82);
  color: white;
}

*/
.sectionHeader{
  width: 100%;
}


.card{
  margin: 1em;
  max-width: 20em;
}

.bannerBlurb{
  grid-column: 2/3;
}




}

